<resources>
    <string name="app_name">ECF-APP</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="marticule">Marticule</string>
    <string name="soignemoi">SoigneMoi</string>
    <string name="logout">logout</string>
    <string name="avis">Avis</string>
    <string name="prescription">Prescription</string>
    <string name="titre_de_l_avis">Titre de l’avis</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="nom_prénom_du_médecin">Nom Prénom du Médecin</string>
    <string name="ajouter">Ajouter</string>
    <string name="titre_de_prescription">Titre de prescription</string>
    <string name="liste_de_médicament">Liste de médicament</string>
    <string name="posologie">Posologie</string>
    <string name="date_de_début">Date de Début</string>
    <string name="date_de_fin">Date de Fin</string>
    <string name="confirmer">Confirmer</string>
    <string name="modifier">Modifier</string>
    <string name="suivant">suivant</string>
    <string name="nom_prenom">Nom Prenom</string>
</resources>