<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListPrescriptionActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prescription.ListPrescriptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ListPrescriptionActivityConstraintLayoutHeader"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:background="#3936DF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ListPrescriptionActivityTextViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soignemoi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ListPrescriptionActivityImageViewHeader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ListPrescriptionActivityTextViewHeader"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ListPrescriptionActivityConstraintLayoutPrescription"
        android:layout_width="0dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListPrescriptionActivityConstraintLayoutHeader">

        <View
            android:id="@+id/ListPrescriptionActivityViewTitre"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ListPrescriptionActivityTextViewTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_de_prescription"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListPrescriptionActivityRecylerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListPrescriptionActivityConstraintLayoutPrescription" />

    <ImageView
        android:id="@+id/ListPrescriptionActivityImageViewAjouter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/ajouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ajouter" />
</androidx.constraintlayout.widget.ConstraintLayout>