<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AjouterAvisActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".avis.AjouterAvisActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AjouterAvisActivityConstraintLayoutHeader"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:background="#3936DF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AjouterAvisActivityTextViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soignemoi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/AjouterAvisActivityImageViewHeader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/AjouterAvisActivityTextViewHeader"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/AjouterAvisActivityLinearLatout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/AjouterAvisActivityConstraintLayoutTitreAvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/AjouterAvisActivityTextViewTitreAvis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_de_l_avis"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AjouterAvisActivityTextInputLayoutTitreAvis"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AjouterAvisActivityTextViewTitreAvis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AjouterAvisActivityTextInputEditTextTitreAvis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titre_de_l_avis"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/AjouterAvisActivityConstraintLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/AjouterAvisActivityTextViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AjouterAvisActivityTextInputLayoutDate"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="@id/AjouterAvisActivityTextViewDate"
                app:layout_constraintTop_toBottomOf="@+id/AjouterAvisActivityTextViewDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AjouterAvisActivityTextInputEditTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/AjouterAvisActivityConstraintLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/AjouterAvisActivityTextViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AjouterAvisActivityTextInputLayoutDescription"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AjouterAvisActivityTextViewDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AjouterAvisActivityTextInputEditTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/AjouterAvisActivityConstraintLayoutNomPrenomMedecin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/AjouterAvisActivityTextViewNomPrenomMedecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_prénom_du_médecin"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AjouterAvisActivityTextInputLayoutNomPrenomMedecin"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AjouterAvisActivityTextViewNomPrenomMedecin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AjouterAvisActivityTextInputEditTextNomPrenomMedecin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom_prénom_du_médecin"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/AjouterAvisActivityButton"
        android:layout_width="277dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:text="@string/ajouter"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AjouterAvisActivityLinearLatout"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>